categorie,best sell, summer sale, fruits,done/ hot deal ongo

--- a/test.html
+++ b/test.html
@@ -1,148 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hero Slider</title>
+    <title>Hot Deals Slider</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-
-    <!-- Swiper CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <style>
-      /* Animation */
-      .fade-up {
-        opacity: 0;
-        transform: translateY(30px);
-        transition: all 0.8s ease-in-out;
-      }
-      .swiper-slide-active .fade-up {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      /* Pagination Design */
-      .swiper-pagination-bullet {
-        width: 12px;
-        height: 12px;
-        background: #cbd5e1; /* gray-300 */
-        opacity: 1;
-      }
-      .swiper-pagination-bullet-active {
-        background: #2563eb; /* blue-600 */
-        transform: scale(1.2);
-      }
+        /* Custom CSS to ensure full width */
+        .hot-deals .swiper {
+            width: 100vw;
+            margin-left: 50%;
+            transform: translateX(-50%);
+        }
+        .swiper-slide {
+            background-size: cover !important;
+            background-position: center !important;
+        }
     </style>
-  </head>
-  <body class="bg-gray-50">
-    <!-- Hero Slider -->
-    <div class="swiper myHeroSwiper w-full h-screen">
-      <div class="swiper-wrapper">
-        <!-- Slide 1 -->
-        <div
-          class="swiper-slide flex flex-col md:flex-row items-center justify-between px-6 md:px-16"
-        >
-          <!-- Left Text -->
-          <div class="text-center md:text-left max-w-lg">
-            <h1
-              class="fade-up text-4xl md:text-5xl font-bold text-gray-800 mb-4"
-            >
-              Stylish Headphones
-            </h1>
-            <p
-              class="fade-up text-gray-600 mb-6"
-              style="transition-delay: 0.2s"
-            >
-              Experience premium sound quality with modern design.
-            </p>
-            <button
-              class="fade-up px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition"
-              style="transition-delay: 0.4s"
-            >
-              Shop Now
-            </button>
-          </div>
+</head>
+<body class="bg-white">
+    <section class="hot-deals mt-[60px]">
+        <div class="w-full">
+            <div class="header-box text-center mb-8">
+                <h2 class="flex items-center justify-center gap-2 text-2xl text-[var(--text)] fruits-vegetables-title mb-4 font-bold">
+                    <span class="icon">
+                        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="18" cy="18" r="17.5" stroke="#EEB13C" />
+                            <g clip-path="url(#clip0_217_2038)">
+                                <path d="M26 20.4646C26 24.6365 22.6367 27.9998 18.5 27.9998C14.3633 27.9998 11 24.6353 11 20.4998C11 18.208 12.0867 16.3279 13.1316 15.2615C13.7164 14.6131 14.75 15.0232 14.75 15.8709V19.2107C14.75 20.5845 15.8426 21.7303 17.2172 21.7474C18.6133 21.7693 19.75 20.6404 19.75 19.2498C19.75 15.8123 12.9102 15.4951 17.7129 8.42166C18.2402 7.65135 19.4375 8.00096 19.4375 8.93064C19.4023 12.9607 26 13.8474 26 20.4646Z" fill="#BF2120" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_217_2038">
+                                    <rect width="15" height="20" fill="white" transform="translate(11 8)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </span>
+                    Hot Deals
+                </h2>
+                <p class="text-[var(--text2)] text-sm max-w-xl mx-auto">
+                    Limited-time deals you’ll love! Stock up and save with this week’s top grocery offers before they’re gone.
+                </p>
+            </div>
 
-          <!-- Right Image -->
-          <div class="mt-8 md:mt-0">
-            <img
-              src="https://i.ibb.co/5W3ZVv3/headphone.png"
-              alt="Product"
-              class="w-80 md:w-[450px] fade-up"
-              style="transition-delay: 0.6s"
-            />
-          </div>
+            <div class="swiper dealsSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide rounded-xl flex items-center bg-[url(../assets/img/home/Offer-1.png)] bg-no-repeat bg-cover">
+                        <div class="w-full">
+                            <span class="bg-white text-green-600 text-xs font-semibold px-3 py-1 rounded-full">Exclusive</span>
+                            <h3 class="text-2xl font-bold mt-2">August Deals</h3>
+                            <button class="mt-4 bg-orange-500 text-white px-5 py-2 rounded-full hover:bg-orange-600">
+                                Shop Now
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide rounded-xl flex items-center bg-[url(../assets/img/home/Offer-1.png)] bg-no-repeat bg-cover">
+                        <div class="w-full">
+                            <span class="bg-white text-green-600 text-xs font-semibold px-3 py-1 rounded-full">Exclusive</span>
+                            <h3 class="text-2xl font-bold mt-2">August Deals</h3>
+                            <button class="mt-4 bg-orange-500 text-white px-5 py-2 rounded-full hover:bg-orange-600">
+                                Shop Now
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide rounded-xl flex items-center bg-[url(../assets/img/home/Offer-1.png)] bg-no-repeat bg-cover">
+                        <div class="w-full">
+                            <span class="bg-white text-green-600 text-xs font-semibold px-3 py-1 rounded-full">Exclusive</span>
+                            <h3 class="text-2xl font-bold mt-2">August Deals</h3>
+                            <button class="mt-4 bg-orange-500 text-white px-5 py-2 rounded-full hover:bg-orange-600">
+                                Shop Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-pagination mt-4"></div>
         </div>
+    </section>
 
-        <!-- Slide 2 -->
-        <div
-          class="swiper-slide flex flex-col md:flex-row items-center justify-between px-6 md:px-16"
-        >
-          <div class="text-center md:text-left max-w-lg">
-            <h1
-              class="fade-up text-4xl md:text-5xl font-bold text-gray-800 mb-4"
-            >
-              Smart Watch
-            </h1>
-            <p
-              class="fade-up text-gray-600 mb-6"
-              style="transition-delay: 0.2s"
-            >
-              Track your health & stay connected anytime, anywhere.
-            </p>
-            <button
-              class="fade-up px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700 transition"
-              style="transition-delay: 0.4s"
-            >
-              Explore Now
-            </button>
-          </div>
-
-          <div class="mt-8 md:mt-0">
-            <img
-              src="https://i.ibb.co/fFnPCmj/watch.png"
-              alt="Product"
-              class="w-72 md:w-[400px] fade-up"
-              style="transition-delay: 0.6s"
-            />
-          </div>
-        </div>
-      </div>
-
-      <!-- Swiper Controls -->
-      <div class="swiper-pagination mt-4"></div>
-
-      <!-- Custom Prev/Next -->
-      <div class="swiper-button-prev !text-blue-600 !left-4 !scale-125">
-        <i class="ph-bold ph-caret-left"></i>
-      </div>
-      <div class="swiper-button-next !text-blue-600 !right-4 !scale-125">
-        <i class="ph-bold ph-caret-right"></i>
-      </div>
-    </div>
-
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-      const swiper = new Swiper(".myHeroSwiper", {
-        loop: true,
-        autoplay: {
-          delay: 4000,
-          disableOnInteraction: false,
-        },
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
+        const dealsSwiper = new Swiper(".dealsSwiper", {
+            slidesPerView: 1,
+            spaceBetween: 20,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            breakpoints: {
+                768: {
+                    slidesPerView: 2,
+                },
+            },
+        });
     </script>
-  </body>
+</body>
 </html>
